[tool.poetry]
name = "torch_topological"
version = "0.1.3"
description = "A framework for topological machine learning based on `pytorch`."
authors = ["Bastian Rieck <bastian@rieck.me>"]
license = "BSD-3-Clause"
readme = "README.md"
include = ["README.md"]

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = "^3.5.0"
giotto-ph = "^0.2.0"
torch = "^1.10.1"
gudhi = "^3.4.1"
POT = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Sphinx = "^4.3.1"
sphinx-rtd-theme = "^1.0.0"
tqdm = "^4.62.3"
torchvision = "^0.11.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
