[project]
name = "torch_topological"
version = "0.1.7"
description = "A framework for topological machine learning based on `pytorch`."
authors = [
    {name = "Bastian Rieck", email = "bastian@rieck.me"},
]
license = "BSD-3-Clause"
readme = "README.md"
include = ["README.md"]
requires-python = ">=3.9"
dependencies = [
        'matplotlib>=3.5.0',
        'giotto-ph>=0.2.0',
        'torch>=1.12.0',
        'gudhi>=3.4.1',
        'POT>=0.9.0',
        "numpy (==1.26.4); python_version == '3.12'",
        'importlib-metadata<5.0'
]

[tool.poetry.dependencies]
python = ">=3.9"
importlib-metadata = "<5.0"
matplotlib = "^3.5.0"
giotto-ph = "^0.2.0"
torch = ">=1.12.0"
gudhi = "^3.4.1"
POT = "^0.9.0"
tqdm = "^4.62.3"
numpy = [
   {version="1.26.4", python="3.12"},
   {version="*", python="<3.12"}
]
[tool.poetry.group.test.dependencies]
pytest = ">=5.2"
flake8 = "^4.0.1"
torchvision = ">=0.11.2"

[tool.poetry.group.docs.dependencies]
Sphinx = ">=4.3.1"
sphinx-rtd-theme = "^1.0.0"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
homepage = "https://github.com/aidos-lab/pytorch-topological"
documentation = "https://pytorch-topological.readthedocs.io/"
issues = "https://github.com/aidos-lab/pytorch-topological/issues"
changelog = "https://github.com/aidos-lab/pytorch-topological/blob/main/CHANGELOG.md"
