[project]
name = "torch_topological"
version = "0.1.7"
description = "A framework for topological machine learning based on `pytorch`."
authors = [
    {name = "Bastian Rieck", email = "bastian@rieck.me"},
]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.11,<4"

dependencies = [
    "matplotlib>=3.5",
    "giotto-ph>=0.2",
    "torch>=1.12",
    "gudhi>=3.4",
    "POT>=0.9",
]

[tool.uv]
prerelease = "allow"
index-strategy = "unsafe-best-match"
dev-dependencies = [
    "pytest>=5.2",
    "Sphinx>=4.3",
    "sphinx-rtd-theme>=1.0",
    "tqdm>=4.62",
    "torchvision>=0.11",
    "flake8>=4.0",
]


[tool.black]
line-length = 79

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ['torch_topological']

[project.urls]
homepage = "https://github.com/aidos-lab/pytorch-topological"
documentation = "https://pytorch-topological.readthedocs.io/"
issues = "https://github.com/aidos-lab/pytorch-topological/issues"
changelog = "https://github.com/aidos-lab/pytorch-topological/blob/main/CHANGELOG.md"
